[package]
name = "ness"
version = "0.1.2"
edition = "2021"
description = "A personal program to help human"
license = "GPL-2.0-or-later"
repository = "https://github.com/taishingi/ness"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio = "0.2.0-alpha.4"
audio-core = "0.2.0-alpha.4"
chrono = "0.4.31"
chrono-tz = "0.8.3"
dirs = { version = "5.0.1", features = [] }
dotenv = "0.15.0"
glob = "0.3.1"
mysql = "24.0.0"
notify-rust = "4.9.0"
open-meteo-rs = "0.0.2"
pocketsphinx = "0.6.0"
reqwest = { version = "0.11.22" , features = ["blocking", "json"] }
rodio = "0.17.1"
serde = { version = "1.0" , features = ["derive"] }
serde_derive = "1.0.190"
serde_json = "1.0.107"
serde_yaml = "0.9.21"
sphinxad-sys = "0.1.3"
tokio = "1.33.0"
